sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
	for (i <- 1 to getNombreValeurs-1) {
		var v = getValeur(i);
		var c = 1;
		
		while (plusPetitQue(i-c,v)) {
			if (i-c-1 != -1) {
			copie(i-c-1,i-c)
			c = c + 1 
			} else { i - c - 1 = 0 }
		}
		setValeur(i-c,v)
	}
}

                                                                  